5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4016/executions/1616_2925.log
== TEST (2019-04-01 14:08:42) 
-- CODE:
valor= x**(y)
print(round(valor))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor= x**(y)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:09:01) 
-- CODE:
valor= 5**(2)
print(round(valor))
-- OUTPUT:
25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:09:12) 
-- CODE:
valor= 1**(5)
print(round(valor))
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:09:17) 
-- CODE:
valor= 1**(2)
print(round(valor))
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:09:19) 
-- CODE:
valor= 1**(2)
print(round(valor))
-- EXECUTION TIME:
0.136393
-- TEST CASE 1:
---- input:
9
---- correct output:
512
---- user output:
1
-- TEST CASE 2:
---- input:
13
---- correct output:
8192
---- user output:
1
-- TEST CASE 3:
---- input:
19
---- correct output:
524288
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:09:26) 
-- CODE:
valor= 5**(1)
print(round(valor))
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:09:27) 
-- CODE:
valor= 5**(1)
print(round(valor))
-- EXECUTION TIME:
0.132011
-- TEST CASE 1:
---- input:
9
---- correct output:
512
---- user output:
5
-- TEST CASE 2:
---- input:
13
---- correct output:
8192
---- user output:
5
-- TEST CASE 3:
---- input:
19
---- correct output:
524288
---- user output:
5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:10:32) 
-- CODE:
valor= 5**(6)
print(round(valor))
-- OUTPUT:
15625
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:10:37) 
-- CODE:
valor= 5**()
print(round(valor))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor= 5**()
TypeError: unsupported operand type(s) for ** or pow(): 'int' and 'tuple'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:10:40) 
-- CODE:
valor= 5**(2)
print(round(valor))
-- OUTPUT:
25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:11:25) 
-- CODE:
print(5**(1))
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:11:26) 
-- CODE:
print(5**(1))
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:11:28) 
-- CODE:
print(5**(1))
-- EXECUTION TIME:
0.183661
-- TEST CASE 1:
---- input:
9
---- correct output:
512
---- user output:
5
-- TEST CASE 2:
---- input:
13
---- correct output:
8192
---- user output:
5
-- TEST CASE 3:
---- input:
19
---- correct output:
524288
---- user output:
5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:11:28) 
-- CODE:
print(5**(1))
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:23:32) 
-- CODE:
valor=5**1*5
print
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:23:34) 
-- CODE:
valor=5**1*5
print
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:23:35) 
-- CODE:
valor=5**1*5
print
-- EXECUTION TIME:
0.198509
-- TEST CASE 1:
---- input:
9
---- correct output:
512
---- user output:

-- TEST CASE 2:
---- input:
13
---- correct output:
8192
---- user output:

-- TEST CASE 3:
---- input:
19
---- correct output:
524288
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:23:46) 
-- CODE:
valor=5**1*5
print(valor)
-- OUTPUT:
25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:23:58) 
-- CODE:
valor=5**1
print(valor)
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:23:58) 
-- CODE:
valor=5**1
print(valor)
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:24:45) 
-- CODE:
valor=5**1
print(round(valor))
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:24:59) 
-- CODE:
valor=5**1
print(round(valor,*5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(round(valor,*5))
TypeError: round() argument after * must be an iterable, not int
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:25:05) 
-- CODE:
valor=5**1
print(round(valor,5))
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:25:07) 
-- CODE:
valor=5**1
print(round(valor,5))
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:25:08) 
-- CODE:
valor=5**1
print(round(valor,5))
-- EXECUTION TIME:
0.155904
-- TEST CASE 1:
---- input:
9
---- correct output:
512
---- user output:
5
-- TEST CASE 2:
---- input:
13
---- correct output:
8192
---- user output:
5
-- TEST CASE 3:
---- input:
19
---- correct output:
524288
---- user output:
5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:25:08) 
-- CODE:
valor=5**1
print(round(valor,5))
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:25:10) 
-- CODE:
valor=5**1
print(round(valor,5))
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:25:13) 
-- CODE:
valor=5**1
print(round(valor,6))
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:25:18) 
-- CODE:
valor=5**1
print(round(valor,6*2))
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:25:19) 
-- CODE:
valor=5**1
print(round(valor,6*2))
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:28:53) 
-- CODE:
valor=5**1*4**4
valora=  
print(round(valor,))
-- ERROR:
File "XXXX", line 2
    valora=  
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:29:07) 
-- CODE:
valor=5**1
valora=  4**4
print(round(valor,))
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:29:20) 
-- CODE:
valor=5**1
valora=4**4
print(round(valor,valora))
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:29:21) 
-- CODE:
valor=5**1
valora=4**4
print(round(valor,valora))
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:29:22) 
-- CODE:
valor=5**1
valora=4**4
print(round(valor,valora))
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:29:23) 
-- CODE:
valor=5**1
valora=4**4
print(round(valor,valora))
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:29:55) 
-- CODE:

valora=4**4
print(round(valor,valora))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(valor,valora))
NameError: name 'valor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:29:58) 
-- CODE:

valora=4**4
print(round(valor,valora))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(valor,valora))
NameError: name 'valor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:30:04) 
-- CODE:

valora=4**4
print(round(valora))
-- OUTPUT:
256
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:30:12) 
-- CODE:

valora=4**1
print(round(valora))
-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:30:15) 
-- CODE:

valora=4**4
print(round(valora))
-- OUTPUT:
256
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:30:18) 
-- CODE:

valora=4**2
print(round(valora))
-- OUTPUT:
16
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:30:21) 
-- CODE:

valora=4**3
print(round(valora))
-- OUTPUT:
64
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:30:54) 
-- CODE:

valora=4**4
print(round(valora))
-- OUTPUT:
256
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:31:17) 
-- CODE:
valor=4**4
-- OUTPUT:
256
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:31:28) 
-- CODE:
valor=4**4
print(4**4)
-- OUTPUT:
256
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:31:38) 
-- CODE:
valor=4**4
print(valor)
-- OUTPUT:
256
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:31:39) 
-- CODE:
valor=4**4
print(valor)
-- OUTPUT:
256
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:31:40) 
-- CODE:
valor=4**4
print(valor)
-- OUTPUT:
256
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:31:40) 
-- CODE:
valor=4**4
print(valor)
-- OUTPUT:
256
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:31:48) 
-- CODE:
valor=4**2
print(valor)
-- OUTPUT:
16
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:31:52) 
-- CODE:
valor=**2
print(valor)
-- ERROR:
File "XXXX", line 1
    valor=**2
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:31:53) 
-- CODE:
valor=5**2
print(valor)
-- OUTPUT:
25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:31:57) 
-- CODE:
valor=5**1
print(valor)
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:35:54) 
-- CODE:
valor=3**3
print(valor)
-- OUTPUT:
27
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:35:56) 
-- CODE:
valor=3**3
print(valor)
-- EXECUTION TIME:
0.308676
-- TEST CASE 1:
---- input:
9
---- correct output:
512
---- user output:
27
-- TEST CASE 2:
---- input:
13
---- correct output:
8192
---- user output:
27
-- TEST CASE 3:
---- input:
19
---- correct output:
524288
---- user output:
27
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:35:56) 
-- CODE:
valor=3**3
print(valor)
-- EXECUTION TIME:
0.147595
-- TEST CASE 1:
---- input:
9
---- correct output:
512
---- user output:
27
-- TEST CASE 2:
---- input:
13
---- correct output:
8192
---- user output:
27
-- TEST CASE 3:
---- input:
19
---- correct output:
524288
---- user output:
27
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:36:03) 
-- CODE:
valor=3**2
print(valor)
-- OUTPUT:
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:36:05) 
-- CODE:
valor=3**2
print(valor)
-- EXECUTION TIME:
0.155088
-- TEST CASE 1:
---- input:
9
---- correct output:
512
---- user output:
9
-- TEST CASE 2:
---- input:
13
---- correct output:
8192
---- user output:
9
-- TEST CASE 3:
---- input:
19
---- correct output:
524288
---- user output:
9
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:36:05) 
-- CODE:
valor=3**2
print(valor)
-- EXECUTION TIME:
0.162879
-- TEST CASE 1:
---- input:
9
---- correct output:
512
---- user output:
9
-- TEST CASE 2:
---- input:
13
---- correct output:
8192
---- user output:

-- TEST CASE 3:
---- input:
19
---- correct output:
524288
---- user output:
9
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:36:12) 
-- CODE:
valor=3//2
print(valor)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:36:16) 
-- CODE:
valor=3//3
print(valor)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:36:18) 
-- CODE:
valor=3//7
print(valor)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:36:21) 
-- CODE:
valor=3//1
print(valor)
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:36:25) 
-- CODE:
valor=3/2
print(valor)
-- OUTPUT:
1.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:36:51) 
-- CODE:
valor=3/6
print(valor)
-- EXECUTION TIME:
0.211918
-- TEST CASE 1:
---- input:
9
---- correct output:
512
---- user output:
0.5
-- TEST CASE 2:
---- input:
13
---- correct output:
8192
---- user output:
0.5
-- TEST CASE 3:
---- input:
19
---- correct output:
524288
---- user output:
0.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:36:51) 
-- CODE:
valor=3/6
print(valor)
-- OUTPUT:
0.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:37:00) 
-- CODE:
valor=6/2
print(valor)
-- OUTPUT:
3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:37:11) 
-- CODE:
valor=12/6
print(valor)
-- OUTPUT:
2.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:37:15) 
-- CODE:
valor=12/15
print(valor)
-- OUTPUT:
0.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:37:19) 
-- CODE:
valor=12/2
print(valor)
-- OUTPUT:
6.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:37:23) 
-- CODE:
valor=12/1
print(valor)
-- OUTPUT:
12.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:37:28) 
-- CODE:
valor=12.5/1
print(valor)
-- OUTPUT:
12.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:41:26) 
-- CODE:
print(5/1)
-- OUTPUT:
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:41:30) 
-- CODE:
print(5//)
-- ERROR:
File "XXXX", line 1
    print(5//)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:41:32) 
-- CODE:
print(5//1)
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:41:37) 
-- CODE:
print(5//1*4)
-- OUTPUT:
20
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:41:47) 
-- CODE:
print(4//1*)
-- ERROR:
File "XXXX", line 1
    print(4//1*)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:41:50) 
-- CODE:
print(4//1)
-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:41:53) 
-- CODE:
print(4//2)
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:41:58) 
-- CODE:
print(4//5)
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:42:01) 
-- CODE:
print(4//6)
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:42:03) 
-- CODE:
print(4//7)
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:42:21) 
-- CODE:
print(5)
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:42:49) 
-- CODE:
print((5)
-- EXECUTION TIME:
0.172185
-- ERROR:
  File "/home/codebench/codes/1616/2925/main.py", line 2
    
             ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:42:59) 
-- CODE:
print((5)4*4)
-- ERROR:
File "XXXX", line 1
    print((5)4*4)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:43:24) 
-- CODE:
print(5)
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:43:25) 
-- CODE:
print(5)
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:43:26) 
-- CODE:
print(5)
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:43:26) 
-- CODE:
print(5)
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:43:26) 
-- CODE:
print(5)
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:43:26) 
-- CODE:
print(5)
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:43:27) 
-- CODE:
print(5)
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:43:28) 
-- CODE:
print(5)
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:43:28) 
-- CODE:
print(5)
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:43:28) 
-- CODE:
print(5)
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:43:28) 
-- CODE:
print(5)
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:43:28) 
-- CODE:
print(5)
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:43:28) 
-- CODE:
print(5)
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:43:29) 
-- CODE:
print(5)
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:46:16) 
-- CODE:
x= float(input("geração:"))
result=5**1
print(int(result))
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:46:56) 
-- CODE:
x= float(input("geracao:"))
result=x
print(int(result))
-- OUTPUT:
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:47:47) 
-- CODE:
x= float(input("geracao:"))
result=x
print(int(result))
-- OUTPUT:
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:47:55) 
-- CODE:
x= float(input("geracao:"))
result=x**2
print(int(result))
-- OUTPUT:
81
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:48:35) 
-- CODE:
x= float(input("geracao:"))
result=(x)**2.16
print(int(result))
-- OUTPUT:
115
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:48:37) 
-- CODE:
x= float(input("geracao:"))
result=(x)**2.16
print(int(result))
-- OUTPUT:
115
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:48:59) 
-- CODE:
x= float(input("geracao:"))
result=(x)**2.16
print(int(result))
-- OUTPUT:
115
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:49:28) 
-- CODE:
x= float(input("geracao:"))
result= (x)**2.16
print(int(result))
-- OUTPUT:
115
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:49:29) 
-- CODE:
x= float(input("geracao:"))
result= (x)**2.16
print(int(result))
-- OUTPUT:
115
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:50:13) 
-- CODE:
x= float(input("geracao:"))
result=(x)**2.16
print(int(result))
-- EXECUTION TIME:
0.135113
-- TEST CASE 1:
---- input:
9
---- correct output:
512
---- user output:
115
-- TEST CASE 2:
---- input:
13
---- correct output:
8192
---- user output:
254
-- TEST CASE 3:
---- input:
19
---- correct output:
524288
---- user output:
578
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:50:13) 
-- CODE:
x= float(input("geracao:"))
result=(x)**2.16
print(int(result))
-- OUTPUT:
115
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:50:14) 
-- CODE:
x= float(input("geracao:"))
result=(x)**2.16
print(int(result))
-- OUTPUT:
115
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:50:21) 
-- CODE:
x= float(input("geracao:"))
result=(x)**2.16
print(int(result))
-- OUTPUT:
115
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:50:27) 
-- CODE:
x= float(input("geracao:"))
result=(x)**2.16
print(int(result))
-- EXECUTION TIME:
0.195536
-- TEST CASE 1:
---- input:
9
---- correct output:
512
---- user output:
115
-- TEST CASE 2:
---- input:
13
---- correct output:
8192
---- user output:
254
-- TEST CASE 3:
---- input:
19
---- correct output:
524288
---- user output:
578
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:53:56) 
-- CODE:
x= float(input("geracao:"))
result=(x)**2.16
result2=(x+1)**2.16
result3=(x+2)**2.16
print(int(result,result2,result3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(int(result,result2,result3))
TypeError: int() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:54:28) 
-- CODE:
x= float(input("geracao:"))
result=(x)**2.16
result2=(x+1)**2.16
result3=(x+2)**2.16
print(int(result,result2,result3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(int(result,result2,result3))
TypeError: int() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:54:29) 
-- CODE:
x= float(input("geracao:"))
result=(x)**2.16
result2=(x+1)**2.16
result3=(x+2)**2.16
print(int(result,result2,result3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(int(result,result2,result3))
TypeError: int() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:54:30) 
-- CODE:
x= float(input("geracao:"))
result=(x)**2.16
result2=(x+1)**2.16
result3=(x+2)**2.16
print(int(result,result2,result3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(int(result,result2,result3))
TypeError: int() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:54:30) 
-- CODE:
x= float(input("geracao:"))
result=(x)**2.16
result2=(x+1)**2.16
result3=(x+2)**2.16
print(int(result,result2,result3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(int(result,result2,result3))
TypeError: int() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:54:32) 
-- CODE:
x= float(input("geracao:"))
result=(x)**2.16
result2=(x+1)**2.16
result3=(x+2)**2.16
print(int(result,result2,result3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(int(result,result2,result3))
TypeError: int() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
